# Inoreader-MCP

./: .gitignore  pyproject.toml
src/mcp_server_inoreader/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py  utils.py
tests/: test_utils.py
