[project]
name = "inoreader-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Inoreader RSS reader"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jesse" }]
keywords = ["inoreader", "mcp", "rss", "llm", "model-context-protocol"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "fastmcp>=3.0.0rc1",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/Inoreader-MCP"
Repository = "https://github.com/anomalyco/Inoreader-MCP"
Issues = "https://github.com/anomalyco/Inoreader-MCP/issues"

[project.scripts]
inoreader-mcp = "mcp_server_inoreader:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".uv-cache"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
cache-dir = ".uv-cache"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "pre-commit",
    "pyright",
]

[tool.taskipy.tasks]
default = "task test"
test = "uv run pytest --cov --cov-fail-under=50 tests/"
format = "ruff format src/ tests/ && ruff check --fix src/ tests/"
lint = "ruff check src/ tests/"
clean = "rm -rf .pytest_cache .coverage htmlcov dist build *.egg-info"
